2003-02-08  Janne Jalkanen  <Janne.Jalkanen@nospam.ecyrd.com>

        * v2.0.27.

        * ListLocksPlugin now properly closes table.  Reported by Michael
        Gentry. 

2003-02-06  Janne Jalkanen  <Janne.Jalkanen@nospam.ecyrd.com>

        * Small addition: The preferences cookie now expires in 1001 days
        instead of 90 days.  It turned out to be too fast.

2003-02-05  Janne Jalkanen  <Janne.Jalkanen@nospam.ecyrd.com>

        * v2.0.26.

        * Bug fix: BasicAttachmentProvider still didn't migrate correctly
        from earlier versions.  Sigh...  Patch provided by Torsten
        Hildebrandt.

        * Added Jason Pell's MultipartRequestLibrary v1.30b3, which should
        fix plenty of problems related with uploads.

2003-02-01  Janne Jalkanen  <Janne.Jalkanen@nospam.ecyrd.com>

        * v2.0.25.

        * BasicAttachmentProvider should now properly migrate from earlier
        versions of JSPWiki 2.0 beta.

        * Bug fix: downloading attachments that have non-ascii names
        should work now.  Uploading does not still work, because of bugs
        in httpmultipartrequest library.  Reported by Torsten
        Hildebrandt.  In addition UploadTemplate.jsp now explicitly
        specifies ISO-8859-1 encoding, which seems to work with Mozilla.

        * Bug fix: '}' inside plugins no longer stops parsing.  Reported
        by William Morgan, fix courtesy of Torsten Hildebrandt.
        
        * v2.0.24.

        * CalendarTag is now smarter and can adapt itself to the date.

        * Bug fix: WeblogPlugin would prefer the local parameter instead
        of the one given in HTTP parameters to decide how many days should
        be shown.

        * Bug fix: WeblogPlugin would sort entries wrong on month
        threshold.  Reported by Ebu.

2003-01-31  Janne Jalkanen  <Janne.Jalkanen@nospam.ecyrd.com>

        * v2.0.23.
        
        * WikiSecurityException is now in correct package.  Sorry, no
        other updates at this time.
