@@ -1,3 +1,9 @@
+2003-02-12  Janne Jalkanen  <Janne.Jalkanen@nospam.ecyrd.com>
+
+        * Checked in a bunch of tests from Torsten Hildebrandt.  Most of
+        them fail, which is not a good thing, but I haven't checked them
+        thoroughly yet.
+
 2003-02-08  Janne Jalkanen  <Janne.Jalkanen@nospam.ecyrd.com>
 
         * v2.0.27.
